完成基本的请求处理框架
 未实现 biz 和 data 层操作，仅处理响应和入库
